--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
   ],
   "files": [
     "README.md",
-    "dist/**/*"
+    "dist/**/*",
+    "assets/*"
   ],
   "publishConfig": {
     "access": "public"
