fix: moacha requirements to make the tests run
eg. esm is no longer needed

- "fix" the placement of the dependencies in package.json

--- a/.mocharc.json
+++ b/.mocharc.json
@@ -6,8 +6,8 @@
   "require": [
     "ts-node/register/transpile-only",
     "tsconfig-paths/register",
-    "esm",
     "source-map-support/register",
-    "jsdom-global/register"
+    "jsdom-global/register",
+    "ignore-styles"
   ]
 }
