--- a/package.json
+++ b/package.json
@@ -15,6 +15,36 @@
     "test": "env TS_NODE_COMPILER_OPTIONS='{\"module\": \"commonjs\"}' mocha",
     "test-coverage": "nyc yarn test"
   },
+  "dependencies": {
+    "eventemitter3": "^4.0.7",
+    "ts-type-guards": "^0.7.0"
+  },
+  "devDependencies": {
+    "@commitlint/cli": "^13.1.0",
+    "@commitlint/config-conventional": "^13.1.0",
+    "@istanbuljs/nyc-config-typescript": "^1.0.1",
+    "@rweich/eslint-config": "^1.1.2",
+    "@rweich/prettier-config": "^1.0.2",
+    "@rweich/semantic-release-config": "^1.1.3",
+    "@types/chai": "^4.2.21",
+    "@types/jsdom": "^16.2.13",
+    "@types/mocha": "^9.0.0",
+    "chai": "^4.3.4",
+    "husky": "^7.0.1",
+    "ignore-styles": "^5.0.1",
+    "jsdom": "^16.7.0",
+    "jsdom-global": "^3.0.2",
+    "lint-staged": "^11.1.2",
+    "mocha": "^9.0.3",
+    "nyc": "^15.1.0",
+    "rimraf": "^3.0.2",
+    "semantic-release": "^17.4.4",
+    "source-map-support": "^0.5.19",
+    "ts-node": "^10.1.0",
+    "ttypescript": "^1.5.12",
+    "typescript": "^4.3.5",
+    "typescript-transform-paths": "^3.2.1"
+  },
   "engines": {
     "node": ">=12"
   },
@@ -64,35 +94,5 @@
   "release": {
     "extends": "@rweich/semantic-release-config",
     "branches": "main"
-  },
-  "devDependencies": {
-    "@commitlint/cli": "^13.1.0",
-    "@commitlint/config-conventional": "^13.1.0",
-    "@istanbuljs/nyc-config-typescript": "^1.0.1",
-    "@rweich/eslint-config": "^1.1.2",
-    "@rweich/prettier-config": "^1.0.2",
-    "@rweich/semantic-release-config": "^1.1.3",
-    "@types/chai": "^4.2.21",
-    "@types/jsdom": "^16.2.13",
-    "@types/mocha": "^9.0.0",
-    "chai": "^4.3.4",
-    "esm": "^3.2.25",
-    "husky": "^7.0.1",
-    "jsdom": "^16.7.0",
-    "jsdom-global": "^3.0.2",
-    "lint-staged": "^11.1.2",
-    "mocha": "^9.0.3",
-    "nyc": "^15.1.0",
-    "rimraf": "^3.0.2",
-    "semantic-release": "^17.4.4",
-    "source-map-support": "^0.5.19",
-    "ts-node": "^10.1.0",
-    "ttypescript": "^1.5.12",
-    "typescript": "^4.3.5",
-    "typescript-transform-paths": "^3.2.1"
-  },
-  "dependencies": {
-    "eventemitter3": "^4.0.7",
-    "ts-type-guards": "^0.7.0"
   }
 }
