feat: add details element
.. with additional sub-elements to create the details (info) view
- add click-link-callback so the PI receives a notification when a link got clicked
- add style override for links in the details view (so they dont look like crap)
- disable unicorn/no-array-callback-reference as it complains about the isXX methods

--- a/package.json
+++ b/package.json
@@ -70,7 +70,10 @@
     ]
   },
   "eslintConfig": {
-    "extends": "@rweich"
+    "extends": "@rweich",
+    "rules": {
+      "unicorn/no-array-callback-reference": 0
+    }
   },
   "lint-staged": {
     "{src,test}/**/*.ts": [
