--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "ci": "yarn type-check && yarn lint && yarn lint-tests && yarn test",
+    "ci": "yarn type-check && yarn lint && yarn test",
     "clean": "rimraf ./dist/*",
     "build": "yarn clean && ttsc -p tsconfig.build.json",
     "lint": "eslint 'src/**/*.ts' 'test/**/*.ts'",
