ci!: tweak ci-workflows
- use the current lts node v16 for the workflows (from v12)
- remove support for node v12 and v15 as they're no longer supported
- add test-release workflow to check if the semantic release works
- remove the schedule from the codeql workflow as it gets disabled anyway

BREAKING CHANGE: dropped node v15 support

--- a/package.json
+++ b/package.json
@@ -95,7 +95,6 @@
     ]
   },
   "release": {
-    "extends": "@rweich/semantic-release-config",
-    "branches": "main"
+    "extends": "@rweich/semantic-release-config"
   }
 }
