--- a/.github/workflows/build-test-versions.yml
+++ b/.github/workflows/build-test-versions.yml
@@ -1,4 +1,4 @@
-name: Build/Test
+name: Build/Test-Versions
 
 on: [ push, pull_request ]
 
@@ -9,7 +9,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [ 12.x, 14.x, 15.x ]
+        node-version: [ 14.x, 16.x, 17.x ]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
@@ -21,4 +21,5 @@ jobs:
       - run: yarn install
       - run: yarn type-check
       - run: yarn lint
+      - run: yarn test
       - run: yarn build
