--- a/.github/workflows/test-release.yml
+++ b/.github/workflows/test-release.yml
@@ -1,23 +1,69 @@
 name: Test-Release
 
-on: [ push ]
+on:
+  push:
+    branches-ignore: [dependabot/**]
+  workflow_dispatch:
+
+permissions:
+  contents: write
 
 jobs:
   release:
+    name: test release
 
     runs-on: ubuntu-latest
 
     steps:
-      - name: Get branch name
-        id: branch-name
-        uses: tj-actions/branch-names@v5
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
+      - uses: step-security/harden-runner@18bf8ad2ca49c14cbb28b91346d626ccfb00c518 # 2.1.0
         with:
-          node-version: 16
-      - run: yarn install
-      - name: Release Test
+          disable-sudo: true
+          egress-policy: block
+          allowed-endpoints: >
+            github.com:443
+            registry.npmjs.org:443
+
+      - name: Get branch name
+        uses: tj-actions/branch-names@eee8675bd61ec38bcfbfedd504d8473292ba649e # 6.4
+        id: branch-name
+
+      - name: Checkout
+        uses: actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c # 3.3.0
+
+      - name: Semantic Release
+        uses: cycjimmy/semantic-release-action@8f6ceb9d5aae5578b1dcda6af00008235204e7fa # 3.2
+        id: semantic
+        with:
+          dry_run: true
+          semantic_version: 19.0.5
+          branch: ${{ steps.branch-name.outputs.current_branch }}
+          extends: |
+            @rweich/semantic-release-config
+          extra_plugins: |
+            @semantic-release/changelog
+            @semantic-release/git
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
-        run: yarn semantic-release --dry-run --branches ${{ steps.branch-name.outputs.current_branch }}
+
+      - name: Test Outputs
+        run: |
+          cat <<EOO >> $GITHUB_STEP_SUMMARY
+            ---
+
+            ### Semantic release output (DRY-RUN)
+
+            <table>
+              <tr><th>published</th><td>${{ steps.semantic.outputs.new_release_published }}</td></tr>
+              <tr><th>last release</th><td>${{ steps.semantic.outputs.last_release_version }}</td></tr>
+              <tr><th>next release</th><td>${{ steps.semantic.outputs.new_release_version }}</td></tr>
+            </table>
+
+            ---
+
+            #### Release-Notes
+
+            ${{ steps.semantic.outputs.new_release_notes }}
+
+          ---
+          EOO
