--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "prepare": "husky install",
     "type-check": "tsc --noEmit",
     "test": "env TS_NODE_COMPILER_OPTIONS='{\"module\": \"commonjs\"}' mocha",
-    "test-coverage": "nyc yarn test"
+    "test-coverage": "nyc yarn test",
+    "test-coverage-html": "nyc --reporter=html yarn test"
   },
   "dependencies": {
     "eventemitter3": "^5.0.0",
